force-app/main/default/objects/Application_Section_Language__c/Application_Section_Language__c.object-meta.xml
<CustomObject>
    <label>Application Section Language</label>
    <nameField>
        <displayFormat>ASL-{000000}</displayFormat>
        <label>Application Section Language Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Section Languages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>