force-app/main/default/objects/Application_Section_Language__c/fields/Application_Section__c.field-meta.xml
<CustomField>
    <fullName>Application_Section__c</fullName>
    <label>Application Section</label>
    <referenceTo>Application_Section__c</referenceTo>
    <relationshipLabel>Application Section Languages</relationshipLabel>
    <relationshipName>Application_Section_Languages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>